# krkrsdl2

./: .gitignore  .gitmodules  CMakeLists.txt  Gemfile  LICENSE  README.en_US.md  README.md  _config.yml  feed.xml  index.html  index.md  meson.build  meson_options.txt  robots.txt  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  jekyll.yml
_layouts/: default.html
android-project/: build.gradle  gradle  gradle.properties  gradlew  gradlew.bat  settings.gradle
android-project/app/: build.gradle  proguard-rules.pro
android-project/app/src/main/: AndroidManifest.xml  res
assets/css/: styles.css
data/: startup.tjs
en/: index.html  index.md
include/common/windows/: unistd.h
src/config/: iOSBundleInfo.plist.in  index.html.in  jconfig.h  tp_stub_template.cmake
src/config/src_list/binarystream/: sources.txt
src/config/src_list/csvparser/: sources.txt
src/config/src_list/extrans/: sources.txt
src/config/src_list/fftgraph/: sources.txt
src/config/src_list/fstat/: sources.txt
src/config/src_list/getsample/: sources.txt
src/config/src_list/json/: sources.txt
src/config/src_list/kagparser/: sources.txt
src/config/src_list/kirikirisdl2/: includes.txt  sources.txt  sources_avx2.txt  sources_sse2.txt
src/config/src_list/kratrac9/: sources.txt
src/config/src_list/krglhwebp/: includes.txt  sources.txt
src/config/src_list/kri18n/: sources.txt
src/config/src_list/ksupport/: sources.txt
src/config/src_list/layerexareaaverage/: sources.txt
src/config/src_list/layerexbtoa/: sources.txt
src/config/src_list/layereximage/: sources.txt
src/config/src_list/layerexlongexposure/: sources.txt
src/config/src_list/layerexraster/: sources.txt
src/config/src_list/lineparser/: sources.txt
src/config/src_list/savestruct/: sources.txt
src/config/src_list/scriptsex/: sources.txt
src/config/src_list/shrinkcopy/: sources.txt
src/config/src_list/varfile/: sources.txt
src/config/src_list/wutcwf/: sources.txt
src/config/src_list/wuvorbis/: includes.txt  sources.txt
src/core/base/: BinaryStream.cpp  ScriptMgnIntf.cpp  ScriptMgnIntf.h  SysInitIntf.cpp  SystemIntf.cpp  TextStream.cpp  UserEvent.h  XP3Archive.cpp
src/core/base/android/: GetLocalFileListAt.cpp  GetLocalFileListAt.h  StorageImpl.cpp  StorageImpl.h
src/core/base/sdl2/: AndroidAssetManager.c  AndroidAssetManager.h  EventImpl.cpp  FuncStubs.cpp  NativeEventQueue.cpp  NativeEventQueue.h  PluginImpl.cpp  PluginImpl.h  ScriptMgnImpl.cpp  StorageImpl.cpp  StorageImpl.h  SusieArchive.cpp  SusieArchive.h  SysInitImpl.cpp  SysInitImpl.h  SystemImpl.cpp  makestub.pl  makestub.py
src/core/base/win32/: FileSelector.cpp  NativeEventQueue.cpp  NativeEventQueue.h  PluginImpl.cpp  PluginImpl.h  ScriptMgnImpl.cpp  SysInitImpl.cpp  SysInitImpl.h  SystemImpl.cpp
src/core/environ/: Platform.h
src/core/environ/android/: SystemControl.cpp  SystemControl.h  VirtualKey.h
src/core/environ/sdl2/: Application.cpp  Application.h  ApplicationSpecialPath.h  DetectCPU.cpp  SystemControl.cpp  SystemControl.h  TVPWindow.h  VirtualKey.h
src/core/environ/win32/: Application.cpp  Application.h  ApplicationSpecialPath.h  TVPWindow.h
src/core/msg/: MsgIntf.cpp  MsgIntf.h  MsgIntfInc.h
src/core/msg/sdl2/: MsgImpl.cpp  MsgImpl.h  MsgLoad.cpp  license.inc.h
src/core/msg/win32/: MsgImpl.cpp
src/core/sdl2/: SDLApplication.cpp  SDLApplication.h  SDLBitmapCompletion.cpp  SDLBitmapCompletion.h  SDLEntrypoint.cpp  SDLPrecompiledHeader.h  SDLPrecompiledHeader.hpp  SIMDeRenames.h
src/core/sound/: MathAlgorithms.h  PhaseVocoderDSP.cpp  PhaseVocoderDSP.h  PhaseVocoderFilter.cpp  RealFFT.h  RingBuffer.h  SoundBufferBaseImpl.cpp  WaveIntf.cpp  WaveIntf.h
src/core/sound/sdl2/: AudioDeviceCreator.cpp  FAudioDevice.cpp  NullAudioDevice.cpp  OpenALWaveMixer.cpp  OpenALWaveMixer.h  WaveImpl.cpp  WaveImpl.h  WaveMixer.cpp  WaveMixer.h  tvpsnd.h
src/core/sound/win32/: WaveImpl.cpp  WaveImpl.h  WaveMixer.cpp  WaveMixer.h
src/core/tjs2/: tjs.cpp  tjs.tab.cpp  tjsArray.cpp  tjsCommHead.h  tjsConfig.cpp  tjsConfig.h  tjsDate.cpp  tjsDictionary.cpp  tjsError.h  tjsErrorInc.h  tjsString.h  tjsTypes.h  tjsdate.tab.cpp  tjspp.tab.cpp
src/core/utils/: DebugIntf.cpp  FilePathUtil.h  NativeFile.h  StringUtil.h  ThreadIntf.cpp  ThreadIntf.h  VelocityTracker.h
src/core/utils/sdl2/: ClipboardImpl.cpp
src/core/visual/: BitmapIntf.cpp  BitmapLayerTreeOwner.cpp  BitmapLayerTreeOwner.h  DrawDevice.cpp  FontSystem.cpp  FreeType.cpp  GraphicsLoaderIntf.cpp  GraphicsLoaderIntf.h  LayerIntf.cpp  LayerTreeOwnerImpl.cpp  LayerTreeOwnerImpl.h  LoadJPEG.cpp  LoadPNG.cpp  PrerenderedFont.h  RectItf.cpp  RectItf.h  VideoOvlIntf.cpp  VideoOvlIntf.h  WindowIntf.cpp  WindowIntf.h  drawable.h  transhandler.h  tvpgl.c  tvpgl.h  tvpinputdefs.h  tvpps.inc  voMode.h
src/core/visual/gl/: ResampleImage.cpp
src/core/visual/sdl2/: BasicDrawDevice.cpp  BasicDrawDevice.h  BitmapBitsAlloc.cpp  BitmapBitsAlloc.h  BitmapInfomation.cpp  BitmapInfomation.h  DInputMgn.h  GraphicsLoaderImpl.cpp  GraphicsLoaderImpl.h  LayerImpl.cpp  LayerImpl.h  NativeFreeTypeFace.h  TVPScreen.cpp  TVPScreen.h  TVPSysFont.h  VSyncTimingThread.h  VideoOvlImpl.cpp  VideoOvlImpl.h  WindowImpl.cpp  WindowImpl.h
src/core/visual/win32/: BasicDrawDevice.cpp  BasicDrawDevice.h  BitmapBitsAlloc.cpp  BitmapBitsAlloc.h  DInputMgn.h  DrawDevice.cpp  DrawDevice.h  GraphicsLoaderImpl.cpp  GraphicsLoaderImpl.h  LayerImpl.cpp  LayerImpl.h  NativeFreeTypeFace.h  TVPScreen.cpp  TVPScreen.h  TVPSysFont.h  VSyncTimingThread.h  VideoOvlImpl.cpp  VideoOvlImpl.h  WindowImpl.cpp  WindowImpl.h
src/plugins/: InternalPlugins.cpp  KAGParser.cpp  KAGParser.h  csvParser.cpp  fftgraph.cpp  fstat.cpp  getSample.cpp  istream_compat.cpp  istream_compat.h  kremscripten.cpp  saveStruct.cpp  scripts.cc  tp_stub.h  varfile.cpp  win32dialog.cpp  wutcwf.cpp
src/plugins/menu/: cocoa.mm  common.h  menu.cc  menu.h  win32.cc
src/plugins/ncbind/: ncbind.cpp  ncbind.hpp
src/resources/macos/: krkrsdl2.icns
src/resources/win32/: krkrsdl2.rc
src/support/: roundevenf.c
(+9 files in other folders)
